fix inputs alignments

--- a/src/routes/CreateExpenseManager/index.module.css
+++ b/src/routes/CreateExpenseManager/index.module.css
@@ -59,3 +59,9 @@
   margin-left: 10px;
   border-right: 2px solid gray;
 }
+
+.row{
+  display: grid;
+  grid-template-columns: 80px 100px;
+  align-items: center;
+}
